Commit for Pk-942

--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -415,6 +415,7 @@
                                                 <Div Class="col-12">
                                                     <Field>
                                                         <FilePicker @ref="ItemDetailPickers[ItemDetailsList.IndexOf(item)]"
+                                                         FilePickerLocalizer="(key,args)=>LocalizeFilePicker(key,args)"
                                                                     Changed="@(async (e) => await OnImageUploadAsync(e,
                                                                                                                      item,
                                                                                                                      ItemDetailPickers[ItemDetailsList.IndexOf(item)]))"
