--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -142,7 +142,25 @@
                     </div>
                 </div>
             }
-
+            <div class="row">
+ <div class="col-2">
+                    <fieldLabel>@L["ItemBadge"]</fieldLabel>
+                </div>
+                <div class="col-10">
+                 
+                          <Addons>
+                        <Addon AddonType="AddonType.Body">
+                          <TextEdit @bind-Text="@CreateItemDto.ItemBadge" MaxLength="@MaxBadgeTextCount" />
+                          </Addon>
+                        <Addon AddonType="AddonType.End">
+                            <AddonLabel Style="background-color: #f5f5f7">
+                                @(string.IsNullOrWhiteSpace(CreateItemDto.ItemBadge) ? 0 : (CreateItemDto.ItemBadge.Count()))/@MaxBadgeTextCount
+                            </AddonLabel>
+                        </Addon>
+                    </Addons>
+              
+                    </div>
+            </div>
             <div class="row">
                 <div class="col-2">
                     <fieldLabel>@L["ItemDescription"]</fieldLabel>
