--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -137,7 +137,23 @@
                 </div>
             </div>
         }
-
+               <div class="row">
+            <div class="col-2">
+                <label>@L["ItemBadge"]</label>
+            </div>
+            <div class="col-10">
+                <Addons>
+                    <Addon AddonType="AddonType.Body">
+                        <TextEdit @bind-Text="@UpdateItemDto.ItemBadge" MaxLength="@MaxItemBadgeCount" />
+                    </Addon>
+                    <Addon AddonType="AddonType.End">
+                        <AddonLabel Style="background-color: #f5f5f7">
+                            @(string.IsNullOrWhiteSpace(UpdateItemDto.ItemBadge) ? 0 : (UpdateItemDto.ItemBadge.Count()))/@MaxItemBadgeCount
+                        </AddonLabel>
+                    </Addon>
+                </Addons>
+            </div>
+        </div>
         <div class="row">
             <div class="col-2">
                 <fieldLabel>@L["ItemDescription"]</fieldLabel>
