--- a/src/Kooco.Pikachu.Blazor/Pages/AddOnProducts/NewAddOnProduct.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/AddOnProducts/NewAddOnProduct.razor
@@ -305,7 +305,7 @@
                 </Column>
                 <Column ColumnSize="ColumnSize.Is12">
                     <EditForm EditContext="editContext">
-                    <AntDesign.Select Mode="multiple"
+                    <AntDesign.Select Mode="AntDesign.SelectMode.Multiple"
                     TItem="Guid"
                                       TItemValue="Guid"
                                      @bind-Values="@SelectedGroupBuy"
