--- a/src/Kooco.Pikachu.Blazor/Pages/DiscountCodes/NewDiscountCode.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/DiscountCodes/NewDiscountCode.razor
@@ -154,7 +154,7 @@
                         </Column>
                         <Column ColumnSize="ColumnSize.Is12">
                             <EditForm EditContext="editContext">
-                                <AntDesign.Select Mode="multiple"
+                                <AntDesign.Select Mode="AntDesign.SelectMode.Multiple"
                                                   TItem="Guid"
                                                   TItemValue="Guid"
                                                   @bind-Values="@SelectedGroupBuy"
@@ -192,7 +192,7 @@
                         <Column ColumnSize="ColumnSize.Is12">
                             <EditForm EditContext="editContext">
 
-                                <AntDesign.Select Mode="multiple"
+                                <AntDesign.Select Mode="AntDesign.SelectMode.Multiple"
                                                   TItem="Guid"
                                                   TItemValue="Guid"
                                                   @bind-Values="@SelectedProducts"
@@ -271,7 +271,7 @@
                             </Column>
                             <Column ColumnSize="ColumnSize.Is12">
                                 <EditForm EditContext="editContext">
-                                    <AntDesign.Select Mode="multiple"
+                                    <AntDesign.Select Mode="AntDesign.SelectMode.Multiple"
                                                       TItem="DeliveryMethod"
                                                       TItemValue="DeliveryMethod"
                                                       @bind-Values="@SelectedShippings"
