--- a/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditUseSetting.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCreditUseSetting.razor
@@ -23,176 +23,176 @@
 
     </Row>
 </Div>
-<Form >
-    <Validations  @ref="@ValidationsRef" Model="@CreateUpdateUsage" ValidateOnLoad="false">
-<Card>
-    <CardBody>
-        <Row VerticalGutter="10">
+<Form>
+    <Validations @ref="@ValidationsRef" Model="@CreateUpdateUsage" ValidateOnLoad="false">
+        <Card>
+            <CardBody>
+                <Row VerticalGutter="10">
                     <Validation MessageLocalizer="@LH.Localize">
-            <Column ColumnSize="ColumnSize.Is3">
-                <h4 class="text-dark">@L["AllowUsage"]</h4>
-            </Column>
-            <Column ColumnSize="ColumnSize.Is9">
-               
-                <Column ColumnSize="ColumnSize.Is12">
-                    <Switch TValue="bool" @bind-Checked="CreateUpdateUsage.AllowUsage" >
-                        <Feedback>
-                            <ValidationError/>
-                        </Feedback>
-                    </Switch>
+                        <Column ColumnSize="ColumnSize.Is3">
+                            <h4 class="text-dark">@L["AllowUsage"]</h4>
+                        </Column>
+                        <Column ColumnSize="ColumnSize.Is9">
 
-                </Column>
+                            <Column ColumnSize="ColumnSize.Is12">
+                                <Switch TValue="bool" @bind-Checked="CreateUpdateUsage.AllowUsage">
+                                    <Feedback>
+                                        <ValidationError />
+                                    </Feedback>
+                                </Switch>
 
-            </Column>
-            </Validation>
+                            </Column>
 
-        </Row>
-    </CardBody>
-</Card>
-<Card>
-    <CardBody>
-        <Row VerticalGutter="10">
-            <Column ColumnSize="ColumnSize.Is3">
-                <h4 class="text-dark">@L["DiscountMethod"]</h4>
-            </Column>
-            <Column ColumnSize="ColumnSize.Is9">
-                <Column ColumnSize="ColumnSize.Is12">
-                       <Validation MessageLocalizer="@LH.Localize">
-                    <Label>@L["DeductionMethod"]</Label>
-                    <RadioGroup Orientation="Orientation.Vertical" TValue="string" Name="DeductionMethod" @bind-CheckedValue="CreateUpdateUsage.DeductionMethod">
-                        <ChildContent>
-                        <Radio Value="@("UnifiedCalculation")">@L["UnifiedCalculation:"]<NumericEdit @bind-Value="CreateUpdateUsage.UnifiedMaxDeductiblePoints" Max="100" TValue="int" />%</Radio>
-                        <Radio Value="@("StagedCalculation")">@L["StagedCalculation"]</Radio>
-                  </ChildContent>
-                  <Feedback>
-                      <ValidationError/>
-                  </Feedback>
-                    </RadioGroup>
+                        </Column>
                     </Validation>
-                </Column>
-                <Column ColumnSize="ColumnSize.Is12">
-                    <Row>
-                        <Column ColumnSize="ColumnSize.Is6">
-                    <Label>@L["StagedSettings"]</Label>
-                        </Column>
-                        <Column Class="text-end" ColumnSize="ColumnSize.Is6">
-                            <Button Clicked="AddNewRow"><Icon Name="IconName.Add"></Icon></Button>
-                        </Column>
-                        @foreach (var setting in stagedSettings)
-{
-                        <Column ColumnSize="ColumnSize.Is6">
-                            <Label>@L["Spend"]</Label>
-                            <NumericEdit @bind-Value="setting.Spend"  TValue="int" />
-                        </Column>
-                        <Column ColumnSize="ColumnSize.Is6">
-                            <Label>@L["ToReceivePoints"]</Label>
-                                        <NumericEdit @bind-Value="setting.Points" TValue="int" />
-                        </Column>
-}
-                    </Row>
+
+                </Row>
+            </CardBody>
+        </Card>
+        <Card>
+            <CardBody>
+                <Row VerticalGutter="10">
+                    <Column ColumnSize="ColumnSize.Is3">
+                        <h4 class="text-dark">@L["DiscountMethod"]</h4>
                     </Column>
-                <Column ColumnSize="ColumnSize.Is12">
-                     <Validation MessageLocalizer="@LH.Localize">
-                    <Label>@L["ApplicableItems"]</Label>
-                    <RadioGroup Orientation="Orientation.Vertical" TValue="string" Name="ApplicableItems" @bind-CheckedValue="CreateUpdateUsage.ApplicableItems">
-                       <ChildContent>
-                        <Radio Value="@("AddOnProducts")">@L["Add-OnProducts"]</Radio>
-                        <Radio Value="@("ShippingFees")">@L["ShippingFees"]</Radio>
-                  </ChildContent>
-                  <Feedback>
-                      <ValidationError/>
-                  </Feedback>
-                    </RadioGroup>
-                    </Validation>
-                </Column>
-             
-            </Column>
+                    <Column ColumnSize="ColumnSize.Is9">
+                        <Column ColumnSize="ColumnSize.Is12">
+                            <Validation MessageLocalizer="@LH.Localize">
+                                <Label>@L["DeductionMethod"]</Label>
+                                <RadioGroup Orientation="Orientation.Vertical" TValue="string" Name="DeductionMethod" @bind-CheckedValue="CreateUpdateUsage.DeductionMethod">
+                                    <ChildContent>
+                                        <Radio Value="@("UnifiedCalculation")">@L["UnifiedCalculation:"]<NumericEdit @bind-Value="CreateUpdateUsage.UnifiedMaxDeductiblePoints" Max="100" TValue="int" />%</Radio>
+                                        <Radio Value="@("StagedCalculation")">@L["StagedCalculation"]</Radio>
+                                    </ChildContent>
+                                    <Feedback>
+                                        <ValidationError />
+                                    </Feedback>
+                                </RadioGroup>
+                            </Validation>
+                        </Column>
+                        <Column ColumnSize="ColumnSize.Is12">
+                            <Row>
+                                <Column ColumnSize="ColumnSize.Is6">
+                                    <Label>@L["StagedSettings"]</Label>
+                                </Column>
+                                <Column Class="text-end" ColumnSize="ColumnSize.Is6">
+                                    <Button Clicked="AddNewRow"><Icon Name="IconName.Add"></Icon></Button>
+                                </Column>
+                                @foreach (var setting in stagedSettings)
+                                {
+                                    <Column ColumnSize="ColumnSize.Is6">
+                                        <Label>@L["Spend"]</Label>
+                                        <NumericEdit @bind-Value="setting.Spend" TValue="int" />
+                                    </Column>
+                                    <Column ColumnSize="ColumnSize.Is6">
+                                        <Label>@L["ToReceivePoints"]</Label>
+                                        <NumericEdit @bind-Value="setting.Points" TValue="int" />
+                                    </Column>
+                                }
+                            </Row>
+                        </Column>
+                        <Column ColumnSize="ColumnSize.Is12">
+                            <Validation MessageLocalizer="@LH.Localize">
+                                <Label>@L["ApplicableItems"]</Label>
+                                <RadioGroup Orientation="Orientation.Vertical" TValue="string" Name="ApplicableItems" @bind-CheckedValue="CreateUpdateUsage.ApplicableItems">
+                                    <ChildContent>
+                                        <Radio Value="@("AddOnProducts")">@L["Add-OnProducts"]</Radio>
+                                        <Radio Value="@("ShippingFees")">@L["ShippingFees"]</Radio>
+                                    </ChildContent>
+                                    <Feedback>
+                                        <ValidationError />
+                                    </Feedback>
+                                </RadioGroup>
+                            </Validation>
+                        </Column>
 
-        </Row>
-    </CardBody>
-</Card>
-<Card>
-    <CardBody>
-        <Row VerticalGutter="10">
-            <Column ColumnSize="ColumnSize.Is3">
-                <h4 class="text-dark">@L["UsableScope"]</h4>
-            </Column>
-           
-            <Column ColumnSize="ColumnSize.Is9">
-                <Column ColumnSize="ColumnSize.Is12">
-                      <Validation MessageLocalizer="@LH.Localize">
-                    <Label>@L["UsableforGroupbuying"]</Label>
-                    <RadioGroup Orientation="Orientation.Vertical" TValue="string" @bind-CheckedValue="CreateUpdateUsage.UsableGroupbuysScope" Name="Groupbuys">
-                       <ChildContent>
-                        <Radio Value="@("AllGroupbuys")">@L["AllGroupbuys"]</Radio>
-                        <Radio Value="@("SpecificGroupbuys")">@L["SpecificGroupbuys"]</Radio>
-                    </ChildContent>
-                    <Feedback>
-                        <ValidationError/>
-                    </Feedback>
-                    </RadioGroup>
-                    </Validation>
-                </Column>
-                <Column ColumnSize="ColumnSize.Is12">
-                     <EditForm EditContext="editContext">
-                    <AntDesign.Select Mode="multiple"
-                                      TItem="Guid"
-                                      TItemValue="Guid"
-                                      @bind-Values="@SelectedGroupBuy"
-                                      Placeholder="@L["SelectaGroupBuys"]"
-                                      EnableSearch>
-                        <SelectOptions>
-                            @foreach (var item in Groupbuys)
-                            {
-                                <AntDesign.SelectOption TItemValue="Guid" TItem="Guid" Value=@item.Id Label=@item.GroupBuyName />
-                            }
-                        </SelectOptions>
-                    </AntDesign.Select>
+                    </Column>
+
+                </Row>
+            </CardBody>
+        </Card>
+        <Card>
+            <CardBody>
+                <Row VerticalGutter="10">
+                    <Column ColumnSize="ColumnSize.Is3">
+                        <h4 class="text-dark">@L["UsableScope"]</h4>
+                    </Column>
+
+                    <Column ColumnSize="ColumnSize.Is9">
+                        <Column ColumnSize="ColumnSize.Is12">
+                            <Validation MessageLocalizer="@LH.Localize">
+                                <Label>@L["UsableforGroupbuying"]</Label>
+                                <RadioGroup Orientation="Orientation.Vertical" TValue="string" @bind-CheckedValue="CreateUpdateUsage.UsableGroupbuysScope" Name="Groupbuys">
+                                    <ChildContent>
+                                        <Radio Value="@("AllGroupbuys")">@L["AllGroupbuys"]</Radio>
+                                        <Radio Value="@("SpecificGroupbuys")">@L["SpecificGroupbuys"]</Radio>
+                                    </ChildContent>
+                                    <Feedback>
+                                        <ValidationError />
+                                    </Feedback>
+                                </RadioGroup>
+                            </Validation>
+                        </Column>
+                        <Column ColumnSize="ColumnSize.Is12">
+                            <EditForm EditContext="editContext">
+                                <AntDesign.Select Mode="AntDesign.SelectMode.Multiple"
+                                                  TItem="Guid"
+                                                  TItemValue="Guid"
+                                                  @bind-Values="@SelectedGroupBuy"
+                                                  Placeholder="@L["SelectaGroupBuys"]"
+                                                  EnableSearch>
+                                    <SelectOptions>
+                                        @foreach (var item in Groupbuys)
+                                        {
+                                            <AntDesign.SelectOption TItemValue="Guid" TItem="Guid" Value=@item.Id Label=@item.GroupBuyName />
+                                        }
+                                    </SelectOptions>
+                                </AntDesign.Select>
                                 <ValidationMessage For="() => CreateUpdateUsage!.ProductIds" />
                             </EditForm>
 
-                </Column>
+                        </Column>
 
-                <Divider></Divider>
+                        <Divider></Divider>
 
-                <Column ColumnSize="ColumnSize.Is12">
-                    <Label>@L["UseableforProducts"]</Label>
-                      <Validation MessageLocalizer="@LH.Localize">
-                    <RadioGroup Orientation="Orientation.Vertical" TValue="string" @bind-CheckedValue="CreateUpdateUsage.UsableProductsScope" Name="Products" >
-                       <ChildContent>
-                        <Radio Value="@("AllProducts")">@L["AllProducts"]</Radio>
-                        <Radio Value="@("SpecificProducts")">@L["SpecificProducts"]</Radio>
-                  </ChildContent>
-                  <Feedback>
-                      <ValidationError/>
-                  </Feedback>
-                    </RadioGroup>
-                    </Validation>
-                </Column>
-                <Column ColumnSize="ColumnSize.Is12">
-                     <EditForm EditContext="editContext">
-                    <AntDesign.Select Mode="multiple"
-                                      TItem="Guid"
-                                      TItemValue="Guid"
-                                      @bind-Values="@SelectedProducts"
-                                      Placeholder="@L["SelectaProducts"]"
-                                      EnableSearch>
-                        <SelectOptions>
-                            @foreach (var item in Products)
-                            {
-                                <AntDesign.SelectOption TItemValue="Guid" TItem="Guid" Value=@item.Id Label=@item.Name />
-                            }
-                        </SelectOptions>
-                    </AntDesign.Select>
+                        <Column ColumnSize="ColumnSize.Is12">
+                            <Label>@L["UseableforProducts"]</Label>
+                            <Validation MessageLocalizer="@LH.Localize">
+                                <RadioGroup Orientation="Orientation.Vertical" TValue="string" @bind-CheckedValue="CreateUpdateUsage.UsableProductsScope" Name="Products">
+                                    <ChildContent>
+                                        <Radio Value="@("AllProducts")">@L["AllProducts"]</Radio>
+                                        <Radio Value="@("SpecificProducts")">@L["SpecificProducts"]</Radio>
+                                    </ChildContent>
+                                    <Feedback>
+                                        <ValidationError />
+                                    </Feedback>
+                                </RadioGroup>
+                            </Validation>
+                        </Column>
+                        <Column ColumnSize="ColumnSize.Is12">
+                            <EditForm EditContext="editContext">
+                                <AntDesign.Select Mode="AntDesign.SelectMode.Multiple"
+                                                  TItem="Guid"
+                                                  TItemValue="Guid"
+                                                  @bind-Values="@SelectedProducts"
+                                                  Placeholder="@L["SelectaProducts"]"
+                                                  EnableSearch>
+                                    <SelectOptions>
+                                        @foreach (var item in Products)
+                                        {
+                                            <AntDesign.SelectOption TItemValue="Guid" TItem="Guid" Value=@item.Id Label=@item.Name />
+                                        }
+                                    </SelectOptions>
+                                </AntDesign.Select>
                                 <ValidationMessage For="() => CreateUpdateUsage!.ProductIds" />
                             </EditForm>
-                </Column>
-            </Column>
+                        </Column>
+                    </Column>
 
-        </Row>
-    </CardBody>
-</Card>
-</Validations>
+                </Row>
+            </CardBody>
+        </Card>
+    </Validations>
 </Form>
 <Div Class="text-end">
     <PikachuButton Class="pk-btn-light" Disabled="@IsUpdating" Clicked="NavigateToShoppingCredits">
