--- a/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
+++ b/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
@@ -55,8 +55,8 @@
     </div>
 
     <abp-script-bundle name="@BlazorLeptonXLiteThemeBundles.Scripts.Global" />
-    <script src="wwwroot/fileDownload.js"></script>
-    <script src="wwwroot/printTradeDocument.js"></script>
-    <script src="wwwroot/order.js"></script>
-    <script src="wwwroot/redirectConfirmClose.js"></script>
+    <script src="/fileDownload.js"></script>
+    <script src="/printTradeDocument.js"></script>
+    <script src="/order.js"></script>
+    <script src="/redirectConfirmClose.js"></script>
 </body>
