Commit for Pk-985

--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -252,7 +252,7 @@
             }
               <PikachuButton Class="pk-btn-sm pk-btn-primary" Clicked="DownloadExcel">
                 <Icon Name="IconName.FileDownload" Display="Display.InlineBlock"></Icon>
-                @L["ExportAll"]
+                @L["Export"]
             </PikachuButton>
           
         </div>
