--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -78,7 +78,7 @@
         <Validations @ref="@EditValidationsRef" Model="@EditGroupBuyDto" ValidateOnLoad="false">
             <div class="row">
                 <div class="col-2">
-                    <label>@L["ShortCode"]</label>
+                    <label>@L["ShortCode"]<span class="text-danger">*</span></label>
                 </div>
                 <div class="col-10">
                     <Validation UsePattern>
