Commit For Pk-982

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -796,6 +796,7 @@
                 </label> *@
                 <Check TValue="bool" Disabled=@(CreateGroupBuyDto.IsEnterprise||isPaymentMethodEnabled()) @bind-Checked="@CreditCard">@L["CreditCard"]</Check>
                 <Check TValue="bool" Disabled=@(CreateGroupBuyDto.IsEnterprise||isPaymentMethodEnabled()) @bind-Checked="@BankTransfer">@L["BankTransfer"]</Check>
+                <Check TValue="bool" Disabled=@(CreateGroupBuyDto.IsEnterprise||isLinePayPaymentMethodEnabled()) @bind-Checked="@IsLinePay">@L["LinePay"]</Check>
                 <Check TValue="bool"
                        @bind-Checked="@IsCashOnDelivery">
                     @L[PikachuResource.CashOnDelivery]
