Commit For Pk-983

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyList.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyList.razor
@@ -199,6 +199,7 @@
 
                         <Check TValue="bool" @bind-Checked="@CreditCard">@L["CreditCard"]</Check>
                         <Check TValue="bool" @bind-Checked="@BankTransfer">@L["BankTransfer"]</Check>
+                        <Check TValue="bool" @bind-Checked="@IsLinePay">@L["LinePay"]</Check>
                         <Check TValue="bool"
                                @bind-Checked="@IsCashOnDelivery">
                             @L[PikachuResource.CashOnDelivery]
