--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -1582,6 +1582,11 @@
             }
               <Card>
                 <CardBody>
+                    <div class="row">
+                            <div class="col-12 d-flex justify-content-between">
+                                <p class="fw-bold">@L["OrderHistory"]</p>
+                            </div>
+                        </div>
                      <div class="order-history-container">  <!-- Scrollable Container -->
             <Table class="order-history-table">
                     
