--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -36,7 +36,7 @@
             white-space: nowrap;
         }
         .order-history-container {
-    max-height: 500px; /* Adjust height as needed */
+    max-height: 263px; /* Adjust height as needed */
     overflow-y: auto; /* Enables vertical scrolling */
     border: 1px solid #ddd; /* Optional: Adds a border for visibility */
 }
@@ -59,6 +59,18 @@
     position: sticky;
     top: 0;
     z-index: 2;
+}
+
+.step-circle {
+  
+    width: 3.5rem!important;
+    height: 3.5rem!important;
+    
+
+}
+.step-container {
+   
+    padding-right: 3rem!important;
 }
 
 </style>
@@ -1580,6 +1592,76 @@
                     </CardBody>
                 </Card>
             }
+            <Card>
+                <CardBody>
+                    <Steps SelectedStep="@selectedStep" NavigationAllowed="NavigationAllowed">
+    <Items>
+        <Step Name="step1">
+            <Marker>
+                <Icon style="font-size: 27px;" class="fas fa-file-alt" /> <!-- Order Created -->
+            </Marker>
+            <Caption>
+                @L["Order Created"] 
+            </Caption>
+        </Step>
+
+        <Step Name="step2">
+            <Marker>
+                <Icon style="font-size: 27px;" class="fas fa-cogs" />  <!-- Processing -->
+            </Marker>
+            <Caption>
+                @L["Processing"]
+            </Caption>
+        </Step>
+
+        <Step Name="step3">
+            <Marker>
+                <Icon style="font-size: 27px;" class="fas fa-box" />  <!-- Picking Completed -->
+            </Marker>
+            <Caption>
+                @L["PickingCompleted"]
+            </Caption>
+        </Step>
+
+        <Step Name="step4">
+            <Marker>
+                <Icon style="font-size: 27px;" class="fas fa-truck" />  <!-- Shipped -->
+            </Marker>
+            <Caption>
+                @L["Shipped"]
+            </Caption>
+        </Step>
+
+        <Step Name="step5">
+            <Marker>
+                <Icon style="font-size: 27px;" class="fas fa-check-circle" />  <!-- Delivered -->
+            </Marker>
+            <Caption>
+              @L["Delivered"]
+            </Caption>
+        </Step>
+
+        <Step Name="step6">
+            <Marker>
+                <Icon style="font-size: 27px;" class="fas fa-flag-checkered" /> <!-- Closed -->
+            </Marker>
+            <Caption>
+                @L["Closed"]
+            </Caption>
+        </Step>
+    </Items>
+    <Content>
+         <StepPanel Name="step1"></StepPanel>
+         <StepPanel Name="step2"></StepPanel>
+         <StepPanel Name="step3"></StepPanel>
+         <StepPanel Name="step4"></StepPanel>
+         <StepPanel Name="step5"></StepPanel>
+         <StepPanel Name="step6"></StepPanel>
+        </Content>
+</Steps>
+</CardBody>
+
+</Card>
               <Card>
                 <CardBody>
                     <div class="row">
